WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73413
MacroAssemblerARM does not implement readCallTarget
https://bugs.webkit.org/show_bug.cgi?id=73413
Summary
MacroAssemblerARM does not implement readCallTarget
Filip Pizlo
Reported
2011-11-30 01:42:01 PST
Patch forthcoming
Attachments
the patch
(1.83 KB, patch)
2011-11-30 01:43 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Patch
(2.19 KB, patch)
2011-11-30 02:31 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-11-30 01:43:34 PST
Created
attachment 117141
[details]
the patch
Filip Pizlo
Comment 2
2011-11-30 01:51:22 PST
Comment on
attachment 117141
[details]
the patch Marking cq? because I'm going to bed.
Csaba Osztrogonác
Comment 3
2011-11-30 02:23:51 PST
Comment on
attachment 117141
[details]
the patch r- now, because it doesn't build. I'm going to fix it ASAP.
Csaba Osztrogonác
Comment 4
2011-11-30 02:31:48 PST
Created
attachment 117150
[details]
Patch
Gabor Loki
Comment 5
2011-11-30 02:50:35 PST
Comment on
attachment 117150
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117150&action=review
> Source/JavaScriptCore/assembler/ARMAssembler.h:800 > + return reinterpret_cast<void*>(readPointer(reinterpret_cast<void*>(getAbsoluteJumpAddress(from))));
No need for that outer reinterpret_cast, the readPointer return with void*. The patch runs without any js regression, rs=me ;)
Csaba Osztrogonác
Comment 6
2011-11-30 03:09:21 PST
Comment on
attachment 117150
[details]
Patch Landed in
http://trac.webkit.org/changeset/101473
Filip Pizlo
Comment 7
2011-11-30 11:09:34 PST
(In reply to
comment #6
)
> (From update of
attachment 117150
[details]
) > Landed in
http://trac.webkit.org/changeset/101473
Thanks for fixing this!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug